--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
     </main>
      <section class="detalles">
             <div>
-            <h1>¿Cómo funciona nuestro servicio?</h1>
+            <h1>Servicio y Precios</h1>
             <p id="explicacion"></p>
         </div>
         
@@ -478,44 +478,71 @@
     const modal = document.getElementById("myModal"); 
 
     tipoServicio.addEventListener("change", () => {
-        if (tipoServicio.value === "Landing Page (No code)") {
-            explicacion.textContent = "Se trata de la creación de una landing page de alta conversión por profesionales de tu sector. Establecerán la estructura de la página si contemplan poner botón de Whatsapp, Link de Calendly y más componentes.";
-        } else if (tipoServicio.value === "Landing Page (Code)") {
-            explicacion.textContent = "Descripción para Landing Page (Code).";
-        } else if (tipoServicio.value === "Botón de Chat con IA Standar") {
-            explicacion.textContent = "Descripción para Botón de Chat con IA Standar.";
-        } else if (tipoServicio.value === "Botón de Chat con IA Standar + 1 Proceso automático") {
-            explicacion.textContent = "Descripción para Botón de Chat con IA Standar + 1 Proceso automático.";
-        } else if (tipoServicio.value === "Pack i-Sales (2 Meses)") {
-            // Limpiar la explicación actual
-            explicacion.innerHTML = "";
+    const selectedService = tipoServicio.value;
+    const servicioDiv = document.createElement("div");
+    servicioDiv.classList.add("servicio");
 
-            // Crear la estructura HTML para el nuevo contenido
-            const servicioDiv = document.createElement("div");
-            servicioDiv.classList.add("servicio");
-            servicioDiv.innerHTML = `
-                <p>Nuestro Servicio va desde la generación de Clientes Potenciales al seguimiento de los Leads hasta convertirse en clientes. <br> 
-                Nuestro servicio es un servicio integral completo</p>
-                <p>Incluye</p>
-                <ul>
-                    <li>Calendario de ventas semana a semana.</li>
-                    <li>Flujos de ventas por cada canal.</li>
-                    <li>Textos y ganchos desarrollados.</li>
-                    <li>Set Up Publicitaria Facebook, Google o Linkedin.</li>
-                    <li>Setup CRM.</li>
-                    <li>Creación de creativos y copys.</li>
-                    <li>Vídeos e imágenes para anuncios.</li>
-                    <li>Seguimiento diario con el equipo comercial.</li>
-                    <li>2 reuniones de status publicitario y cualificación del lead.</li>
-                    <li>1 campaña de email marketing y flujo para exprimir la base de datos.</li>
-                </ul>
-            `;
+    if (selectedService === "Landing Page (No code)") {
+        servicioDiv.innerHTML = `
+            <p>Descripción para Landing Page (No code).</p>
+        `;
+    } else if (selectedService === "Landing Page (Code)") {
+        servicioDiv.innerHTML = `
+            <p>Descripción para Landing Page (Code).</p>
+        `;
+    } else if (selectedService === "Botón de Chat con IA Standar") {
+        servicioDiv.innerHTML = `
+            <p>Descripción para Botón de Chat con IA Standar.</p>
+        `;
+    } else if (selectedService === "Botón de Chat con IA Standar + 1 Proceso automático") {
+        servicioDiv.innerHTML = `
+            <p>Descripción para Botón de Chat con IA Standar + 1 Proceso automático.</p>
+        `;
+    } else if (selectedService === "Pack i-Sales (2 Meses)") {
+        servicioDiv.innerHTML = `
+            <p>Nuestro Servicio va desde la generación de Clientes Potenciales al seguimiento de los Leads hasta convertirse en clientes.</p>
+            <p>Nuestro servicio es un servicio integral completo que incluye:</p>
+            <ul>
+                <li>Calendario de ventas semana a semana.</li>
+                <li>Flujos de ventas por cada canal.</li>
+                <li>Textos y ganchos desarrollados.</li>
+                <li>Set Up Publicitaria Facebook, Google o Linkedin.</li>
+                <li>Setup CRM.</li>
+                <li>Creación de creativos y copys.</li>
+                <li>Vídeos e imágenes para anuncios.</li>
+                <li>Seguimiento diario con el equipo comercial.</li>
+                <li>2 reuniones de status publicitario y cualificación del lead.</li>
+                <li>1 campaña de email marketing y flujo para exprimir la base de datos.</li>
+            </ul>
+            <h2>Precio <span id="precioServicio">997€ + IVA</span></h2>
+        `;
 
-            // Agregar el nuevo contenido al elemento explicacion
-            explicacion.appendChild(servicioDiv);
-        } else {
-            explicacion.textContent = "";
-        }
+     } else if (selectedService === "Pack i-Sales Pro (2 Meses)") {
+        servicioDiv.innerHTML = `
+            <p>Nuestro Servicio va desde la generación de Clientes Potenciales al seguimiento de los Leads hasta convertirse en clientes.</p>
+            <p>Nuestro servicio es un servicio integral completo que incluye:</p>
+            <ul>
+                <li>Calendario de ventas semana a semana.</li>
+                <li>Flujos de ventas por cada canal.</li>
+                <li>Textos y ganchos desarrollados.</li>
+                <li>Set Up Publicitaria Facebook, Google o Linkedin.</li>
+                <li>Setup CRM.</li>
+                <li>Creación de creativos y copys.</li>
+                <li>Vídeos e imágenes para anuncios.</li>
+                <li>Seguimiento diario con el equipo comercial.</li>
+                <li>2 reuniones de status publicitario y cualificación del lead.</li>
+                <li>1 campaña de email marketing y flujo para exprimir la base de datos.</li>
+            </ul>
+            <h2>Precio <span id="precioServicio">1475€ + IVA</span></h2>
+        `;
+    } else {
+        servicioDiv.innerHTML = "";
+    }
+
+    explicacion.innerHTML = "";
+    explicacion.appendChild(servicioDiv);
+});
+
     });
          nicho.addEventListener("change", () => {
             if (nicho.value === "Belleza B2B") {
