--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         </div>
         
         <div>
-            <h2>Forma de Trabajo</h2>
+            <h2>Sector</h2>
             <p id="trabajo"></p>
         </div></section>
     <footer>
@@ -521,6 +521,10 @@
                 <p>Nuestro Servicio va desde la generación de Clientes Potenciales al seguimiento de los Leads hasta convertirse en clientes.</p>
                 <p>Nuestro servicio es un servicio integral completo que incluye:</p>
                 <ul>
+                 <li>Producción Vídeo Ads con Garantía de éxito.</li>
+                 <li>Grabación de un día (máximo 5 horas).</li>
+                    <li>Locución profesional.</li>
+                    <li>Edición profesional realizada por editores especializados en realizar creativos que funcionan (Entrega en 10 días).</li>
                     <li>Calendario de ventas semana a semana.</li>
                     <li>Flujos de ventas por cada canal.</li>
                     <li>Textos y ganchos desarrollados.</li>
@@ -546,21 +550,22 @@
         if (nicho.value === "Belleza B2B") {
             trabajo.textContent = "El sector de la belleza es un sector muy competitivo. Si vendes productos a Centros Estéticos estás de suerte porque es un sector que en B2B no está bien explotado y puedes conseguir Costes por Cliente Potencial de 2€, como nuestro Cliente Preso Vital que consiguió 300 Leads por un coste total de 600€, para vender un producto de neuro estimulación facial de ticket de 5000€.";
         } else if (nicho.value === "Belleza B2C") {
-            trabajo.textContent = "Forma de trabajo para Belleza B2C";
+            trabajo.textContent = "Si vendes a través de Ecommerce podemos ayudarte a optimizar tus campañas de conversión, Hemos trabajado con todas las plataformas y tenemos resultados.";
         } else if (nicho.value === "Energía B2B") {
-            trabajo.textContent = "Forma de trabajo para Energía B2B";
+            trabajo.textContent = "Conseguir clientes B2B en el sector de la Energía es un gran reto ya que el sector a quemado de forma tradicional el mercado, te recomendamos nuestro servicio de i-Sales Pro en el que vamos a darte 
+                nuestro minset de ventas, conseguirte leads cualificados de dueños de negocios  y te ayudaremos a conectar de forma real con tu cliente.";
         } else if (nicho.value === "Energía B2C") {
             trabajo.textContent = "Forma de trabajo para Energía B2C";
         } else if (nicho.value === "Servicios Informáticos B2B") {
-            trabajo.textContent = "Forma de trabajo para Servicios Informáticos B2B";
+            trabajo.textContent = "Hemos trabajado con grandes empresas informáticas en toda España y también hemos implementado los procesos comerciales que les han permitido conseguir resultados en menos de 2 meses. Con nuestro servicio de I-Sales Pro.";
         } else if (nicho.value === "Infoproducto") {
-            trabajo.textContent = "Forma de trabajo para Infoproducto";
+            trabajo.textContent = "Creamos landing page de alta conversión hechas a código, usamos metodología VSL y estrategias adecuadas para conseguir resultados. Tienes a disponibilidad Setters y Closers";
         } else if (nicho.value === "Tours") {
-            trabajo.textContent = "Forma de trabajo para Tours";
+            trabajo.textContent = "Creamos pasarelas de pago que convierten o te recomendamos plugins como Turitop para comenzar a lanzar campañas y conseguir ventas.";
         } else if (nicho.value === "Clínicas Dentales") {
-            trabajo.textContent = "Forma de trabajo para Clínicas Dentales";
+            trabajo.textContent = "Una de nuestras especialidades, El cliente potencial en este sector es de 3€ de media, os recomendamos nuestro servicio I-Sales para poder cerrar el máximo número de oportunidades, además exprimiremos las bases de datos que tengas a disposición.";
         } else if (nicho.value === "Agencia de Viajes") {
-            trabajo.textContent = "Forma de trabajo para Agencia de Viajes";
+            trabajo.textContent = "Tanto para nuevos clientes particulares , como clientes empresas te recomendamos probar nuestro servicio de publicidad en Meta Ads (Facebook e Instagram). En este sector el cliente potencial final está a 1 - 2€.";
         } else if (nicho.value === "Reparación e Instalación") {
             trabajo.textContent = "Forma de trabajo para Reparación e Instalación";
         } else if (nicho.value === "Mudanzas") {
