--- a/index.html
+++ b/index.html
@@ -552,8 +552,7 @@
         } else if (nicho.value === "Belleza B2C") {
             trabajo.textContent = "Si vendes a través de Ecommerce podemos ayudarte a optimizar tus campañas de conversión, Hemos trabajado con todas las plataformas y tenemos resultados.";
         } else if (nicho.value === "Energía B2B") {
-            trabajo.textContent = "Conseguir clientes B2B en el sector de la Energía es un gran reto ya que el sector a quemado de forma tradicional el mercado, te recomendamos nuestro servicio de i-Sales Pro en el que vamos a darte 
-                nuestro minset de ventas, conseguirte leads cualificados de dueños de negocios  y te ayudaremos a conectar de forma real con tu cliente.";
+            trabajo.textContent = "Conseguir clientes B2B en el sector de la Energía es un gran reto ya que el sector a quemado de forma tradicional el mercado, te recomendamos nuestro servicio de i-Sales Pro en el que vamos a darte nuestro minset de ventas, conseguirte leads cualificados de dueños de negocios  y te ayudaremos a conectar de forma real con tu cliente.";
         } else if (nicho.value === "Energía B2C") {
             trabajo.textContent = "Forma de trabajo para Energía B2C";
         } else if (nicho.value === "Servicios Informáticos B2B") {
